# hitsc

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  TODO.md  vcpkg.json
.github/workflows/: windows-ci.yml
ports/ffmpeg/: portfile.cmake
scripts/: build_windows.ps1  capture_chrome_ws.ps1  make_icons.sh
src/: app_info.hpp  aspeed_decoder.cpp  aspeed_decoder.hpp  aspeed_presenter.hpp  aspeed_view_renderer.hpp  aten_network.cpp  aten_network.hpp  aten_probe.cpp  aten_probe.hpp  aten_protocol.cpp  aten_protocol.hpp  aten_session.cpp  aten_session.hpp  aten_view.cpp  aten_view.hpp  bmc_session.cpp  bmc_session.hpp  cli.cpp  cli.hpp  console.cpp  console.hpp  cookie_jar.cpp  cookie_jar.hpp  diagnostics.cpp  diagnostics.hpp  errors.hpp  hardware_cursor.cpp  hardware_cursor.hpp  hardware_cursor_presenter.cpp  hardware_cursor_presenter.hpp  http_client.cpp  http_client.hpp  kvm_capture.cpp  kvm_capture.hpp  kvm_capture_decode.cpp  kvm_capture_decode.hpp  kvm_probe.cpp  kvm_probe.hpp  kvm_video.cpp  kvm_video.hpp  (+69 more)
src/backends/aspeed/: aspeed_decoder.cpp  aspeed_presenter.cpp
src/backends/aspeed/compat/: emscripten.h
src/backends/aten/: aten_network.cpp  aten_protocol.cpp  aten_protocol.hpp  aten_view.cpp
src/backends/auto/: auto_view.cpp  auto_view.hpp
src/backends/megarac/: megarac_hid.hpp  megarac_protocol.hpp  megarac_session.hpp  megarac_video.cpp  megarac_video.hpp  megarac_view.cpp  megarac_view.hpp  megarac_view_session.cpp  megarac_view_session.hpp
src/backends/pikvm/: pikvm_events.cpp  pikvm_input.hpp  pikvm_session.cpp  pikvm_video.cpp  pikvm_video.hpp  pikvm_video_hardware.cpp  pikvm_video_hardware.hpp  pikvm_view.cpp  pikvm_view.hpp
src/gui/: CMakeLists.txt  LauncherWindow.qml  launcher_gui.cpp  launcher_host_model.cpp  launcher_host_model.hpp  launcher_reachability_probe.cpp  launcher_reachability_probe.hpp  launcher_theme.hpp  launcher_types.cpp  launcher_types.hpp  window_prefs_store.cpp  window_prefs_store.hpp
src/gui/child/: launcher_child_command.cpp  launcher_child_process_manager.hpp  launcher_child_protocol.hpp  parent_liveness_monitor.cpp  parent_liveness_monitor.hpp
src/resources/: hitsc.rc  hitsc_icons.qrc
tests/: aten_protocol_tests.cpp  launcher_tests.cpp
triplets/: x64-windows-static.cmake
